--- a/test/Makefile
+++ b/test/Makefile
@@ -6,7 +6,8 @@ include ../arch.make
 
 # The phony list
 TESTS=test1 test2 test3
-TESTS=test1
+TESTS=test3
+TESTS=test4
 .PHONY: default lib deb clean all $(TESTS)
 
 # We need to add the src-directory to the sources
@@ -36,11 +37,11 @@ all: $(LIB_TEST_NAME) $(TESTS)
 
 test1:
 	(cd $@ ; $(MAKE))
-
 test2:
 	(cd $@ ; $(MAKE))
-
 test3:
+	(cd $@ ; $(MAKE))
+test4:
 	(cd $@ ; $(MAKE))
 
 clean:
