Moved the restriction/prolongation to a separate module Also enabled two different schemes, the full, and the half. They behave almost similarly, so the half is preferred as that requires less computation. Need to look more into the residual grid to capture errors instead of interpolations

--- a/test/Makefile
+++ b/test/Makefile
@@ -8,6 +8,7 @@ include ../arch.make
 TESTS=test1 test2 test3
 TESTS=test3
 TESTS=test4
+#TESTS=test1
 .PHONY: default lib deb clean all $(TESTS)
 
 # We need to add the src-directory to the sources
