Several bug-fixes
* Enabled default initialization of the grids

  When calling mg_gs_cds one can pass an optional argument
  'init' which defaults to true.
  If this is true it will re-allocate the grid AND initialize
  it to zero on all other locations than where constant fields are
  present.

* The tolerances are now the difference between the sum(abs(V)) for
  two cycles.

  I really need to look into these convergence criteria's as it is not
  easy.

  Doing the tolerance from pure V_i - V_{i-1} can easily make loops
  stuck in the V cycles.

  Some kind of direct analysis has to be used.

* Threading updated with better handling of several arrays.

  Also the error estimation is now not reductions as we can
  do with a single atomic statement in the end of the parallel
  regions.

  Also instead of do loops in not-so easily parallelized segments
  we introduce a the OpenMP task based threads.
  This performs much better!

* Removed error analysis on corner elements. They should
  not govern the convergence anyway.

* Implemented a way to handle which methods are used via key numbers.

  Thus the user need not call specific routines to do certain things,
  they customize the grid and then solve the equations.

  control of the restriction and prolongation is thus individually
  controlled.

* Changed the default number of steps to 2 instead of 4.

  No need to do too many iterations before stepping back, besides
  the user can control this parameter.

--- a/test/Makefile
+++ b/test/Makefile
@@ -5,10 +5,7 @@
 include ../arch.make
 
 # The phony list
-TESTS=test1 test2 test3
-TESTS=test3
-TESTS=test4
-#TESTS=test1
+TESTS=test1 test2 test3 test4 test5
 .PHONY: default lib deb clean all $(TESTS)
 
 # We need to add the src-directory to the sources
@@ -43,6 +40,8 @@ test2:
 test3:
 	(cd $@ ; $(MAKE))
 test4:
+	(cd $@ ; $(MAKE))
+test5:
 	(cd $@ ; $(MAKE))
 
 clean:
