--- a/test/test1/Makefile
+++ b/test/test1/Makefile
@@ -25,8 +25,10 @@ dep:
 		*.f90 *.F90
 
 test1: prores.o
-	$(FC) -o $@ $^ $(FFLAGS) $(LIB_TEST_NAME) $(LIB_NAME)
+	$(FC) -o $@ $^ $(FFLAGS) $(LIBS) $(LIB_TEST_NAME) $(LIB_NAME)
+ifdef RUN_TEST
 	./$@
+endif
 
 clean:
 	rm -f test1 $(OBJS) *.mod *.MOD
