Generalized the loop construct with restriction prolongation
* Instead of firmly relying on the methods in the litterature
  we employ the simplest method which ensures that all points
  are taken into account.
  This makes the loop constructs easier, and allows the user
  to put in arbitrary grid-sizes.

* Added initial type for retaining boundary conditions.
  Currently only the Dirichlet BC are implemented.
  For transiesta with multi-electrodes this is fine. :)

* Can make pretty big cells in less than 5 minutes. (350^3)
  with Dirichlet boundary conditions.

--- a/src/Makefile
+++ b/src/Makefile
@@ -16,7 +16,7 @@ dep:
 		*.f90 *.F90
 
 # Grid objects
-OBJS = t_mg.o t_mg_interp.o m_mg_save.o
+OBJS = t_mg.o t_mg_interp.o t_bc.o m_mg_save.o
 
 # Gauss-Seidel objects
 OBJS += m_gs_CDS.o
@@ -36,7 +36,6 @@ clean:
 
 # DO NOT DELETE THIS LINE - used by make depend
 m_gs_CDS.o: t_mg.o t_mg_interp.o
-m_gs_FOS.o: t_mg.o
 m_mg_save.o: t_mg.o
+t_mg.o: t_bc.o
 t_mg_interp.o: t_mg.o
-m_gs.o: m_gs_FOS.o
