--- a/test/Makefile
+++ b/test/Makefile
@@ -36,7 +36,7 @@ lib:
 	$(MAKE) -C lib lib
 
 # Create list of all tests
-TESTS=test1 test2 test3 test4 test5 test6
+TESTS=test1 test2 test3 test4 test5 test6 test7
 .PHONY: $(TESTS)
 
 all: lib $(TESTS)
@@ -75,6 +75,12 @@ ifdef RUN_TEST
 endif
 
 test6: test6.o
+	$(FC) -o $@ $^ $(FFLAGS) $(LIB_TEST_NAME) $(LIB_NAME) $(LIBS)
+ifdef RUN_TEST
+	./$@
+endif
+
+test7: test7.o
 	$(FC) -o $@ $^ $(FFLAGS) $(LIB_TEST_NAME) $(LIB_NAME) $(LIBS)
 ifdef RUN_TEST
 	./$@
