Added input reader to make MG a stand-alone program
* One can now define a MG by simple input files
  It is not very elaborate. But it works.

  As an example test/test6.input is exactly
  equivalent to test/test6.f90.

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,13 @@
 include ../arch.make
 
 # The phony list
-.PHONY: default deb clean
+.PHONY: default deb clean mg
+
+ifneq (,$(findstring -DCDF,$(FPPFLAGS)))
+# Only the save object has references to the netcdf library
+LIBS := ../ncdf/src/libncdf.a ../ncdf/fvar/libvardict.a $(LIBS)
+INC += -I../ncdf/src -I../ncdf/fvar
+endif
 
 LIB_NAME?=libmg.a
 default: $(LIB_NAME)
@@ -16,10 +22,14 @@ dep:
 		*.f90 *.F90
 
 # Grid objects
-OBJS = t_mg.o t_mg_interp.o t_bc.o m_mg_save.o
+OBJS = t_mg.o t_mg_interp.o t_bc.o m_mg_save.o m_io.o m_mg_io.o
 
 # Gauss-Seidel objects
 OBJS += m_gs_CDS.o
+
+# The application
+mg: $(LIB_NAME) $(OBJS) mg.o
+	$(FC) -o $@ mg.o $(OBJS) $(LIB_NAME) $(LIBS)
 
 ifneq (,$(findstring -DCDF,$(FPPFLAGS)))
 # Only the save object has references to the netcdf library
@@ -36,6 +46,8 @@ clean:
 
 # DO NOT DELETE THIS LINE - used by make depend
 m_gs_CDS.o: t_mg.o t_mg_interp.o
-m_mg_save.o: t_mg.o
+m_mg_io.o: m_io.o t_mg.o
+m_mg_save.o: m_io.o t_mg.o
+mg.o: m_gs_CDS.o m_io.o m_mg_io.o m_mg_save.o t_mg.o
 t_mg.o: t_bc.o
 t_mg_interp.o: t_mg.o
