Updated to most recent ncdf commit

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,8 +9,8 @@ include ../arch.make
 
 ifneq (,$(findstring -DCDF,$(FPPFLAGS)))
 # Only the save object has references to the netcdf library
-LIBS := ../ncdf/src/libncdf.a ../ncdf/fvar/libvardict.a $(LIBS)
-INC += -I../ncdf/src -I../ncdf/fvar
+LIBS := ../ncdf/src/libncdf.a ../ncdf/fdict/libvardict.a $(LIBS)
+INC += -I../ncdf/src -I../ncdf/fdict
 endif
 
 LIB_NAME?=libmg.a
@@ -33,7 +33,7 @@ mg: $(LIB_NAME) $(OBJS) mg.o
 
 ifneq (,$(findstring -DCDF,$(FPPFLAGS)))
 # Only the save object has references to the netcdf library
-m_mg_save.o: INC+=-I../ncdf/src -I../ncdf/fvar
+m_mg_save.o: INC+=-I../ncdf/src -I../ncdf/fdict
 endif
 
 # library
