--- a/test/lib/Makefile
+++ b/test/lib/Makefile
@@ -4,7 +4,14 @@
 
 include ../../arch.make
 
-ifneq (,$(findstring -DCDF,$(FPPFLAGS)))
+# Check for CDF compilation
+ifeq ($(USE_CDF),1)
+ifneq (,$(findstring -DMG__CDF,$(FPPFLAGS)))
+FPPFLAGS += -DMG__CDF
+endif
+endif
+
+ifneq (,$(findstring -DMG__CDF,$(FPPFLAGS)))
 # Only the save object has references to the netcdf library
 INC += -I../../ncdf/src -I../../ncdf/fvar
 endif
