bug: fixes bugs related to building mg
Also fixes attributes to the NetCDF file written by mg.

Signed-off-by: Nick Papior <nickpapior@gmail.com>

--- a/src/Makefile
+++ b/src/Makefile
@@ -15,8 +15,8 @@ endif
 
 ifneq (,$(findstring -DMG__CDF,$(FPPFLAGS)))
 # Only the save object has references to the netcdf library
-LIBS := ../ncdf/src/libncdf.a ../ncdf/fdict/libvardict.a $(LIBS)
-INC += -I../ncdf/src -I../ncdf/fdict
+LIBS := ../ncdf/libncdf.a ../ncdf/fdict/libfdict.a $(LIBS)
+INCLUDES += -I../ncdf -I../ncdf/fdict
 endif
 
 LIB_NAME?=libmg.a
@@ -42,7 +42,7 @@ mg: $(LIB_NAME) $(OBJS) mg.o
 
 ifneq (,$(findstring -DCDF,$(FPPFLAGS)))
 # Only the save object has references to the netcdf library
-m_mg_save.o: INC+=-I../ncdf/src -I../ncdf/fdict
+m_mg_save.o: INCLUDES+=-I../ncdf -I../ncdf/fdict
 endif
 
 # library
